--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "fs": "0.0.1-security",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
-    "jsdoc": "^3.5.5"
+    "jsdoc": "^3.6.7"
   },
   "scripts": {
     "doc": "node node_modules/jsdoc/jsdoc.js -d /var/www/html/jsdoc/object_descender/ object-descender.js"
